--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -119,7 +119,7 @@
     height: 100vh !important;
     box-shadow: none !important;
     border: none !important;
-    padding: 0px !important;
+    padding: 20px 0px !important;
     border-radius: 0px !important;
   }
 }
